# mediasort

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: demo.cast  style.css
src/: main.rs  utils.rs
