[package]
name = "mediasort"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.4"
image = "0.24"
chrono = {version = "0.4", features = ["serde"]}
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
blake3 = "1.5"
indicatif = "0.17.11"
rayon = "1.10.0"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
console = "0.15.10"
libc = "0.2.170"
trash = "5.2.2"
nom-exif = "2.4.3"
rand = "0.9.0"
tch = { git = "https://github.com/zhoubin-me/tch-rs.git", branch = "main" }
