[package]
name = "mediasort"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.4"
chrono = {version = "0.4", features = ["serde"]}
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
blake3 = "1.5"
indicatif = "0.17.11"
rayon = "1.10.0"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
console = "0.15.10"
libc = "0.2.170"
trash = "5.2.2"
nom-exif = "2.4.3"
rand = "0.9.0"
tch = { git = "https://github.com/zhoubin-me/tch-rs.git", branch = "main" }
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_10"] }
glib = "0.18.5"
home = "0.5.11"
tokio = "1.43.0"


[package.metadata.deb]
name = "mediasort"         # 软件包名
maintainer = "zhoubin <zhoubixyz@gmail.com>"
copyright = "2025, zhoubin"
license-file = ["LICENSE", "0"] # 许可证文件
extended-description = """
这是一个 Rust 编写的工具，打包成 deb 安装包。
"""
depends = "libc6" # 依赖项
section = "utility"
priority = "optional"
assets = [
    ["target/release/mediasort", "/usr/bin/mediasort", "755"],
    ["README.md", "/usr/share/doc/mediasort/README", "644"],
    ["LICENSE", "/usr/share/doc/mediasort/LICENSE", "644"],
    ["assets/style.css", "/usr/share/mediasort/assets/style.css", "644"],
    ["assets/dinov2_vits14.safetensors", "/usr/share/mediasort/assets/dinov2_vits14.safetensors", "644"],
]
